--- a/setup/static/styles/form_avaliacao_disciplina.css
+++ b/setup/static/styles/form_avaliacao_disciplina.css
@@ -1,21 +1,67 @@
 body {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.tab-voltar {
+    /* background-color: #c7c7c7; */
+    border-radius: 10px;
+    padding: 5px;
+    font-weight: normal !important;
+    position: absolute;
+    top: 2vh;
+    left: 0px;
+    margin-left: 3%;
+    text-align: left;
+    width: auto;
+    /* margin-bottom: 10px; */
+}
+
+.formulario {
+    font-family: 'Open Sans', sans-serif; 
+    line-height: 1.2;
+    margin-top: 8vh;
+    font-size: 2.5vh;
+    width: 95%;
+    text-align: center;
+    margin-bottom: 2vh;
+}
+
+.status-formulario {
+    margin-top: 1.5vh;
+    font-size: 1.8vh;
+    text-align: left;
+    padding-left: 10px;
+}
+
+.pergunta-grupo {
+    margin-bottom: -10px;
+    text-align: left;
+    width: 100%;
+    border-bottom: solid 1px;
+    font-size: 2vh;
+}
 
 
-
+.formulario-dados {
+    width: 92%;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
 
 .pergunta-container {
-    width: 95%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     
-    background-color: rgb(225, 225, 225);
+    background-color: #e0e0e0c2;
     border-radius: 5px;
-    margin: 10px;
+    
     padding: 10px;
 }
 
@@ -24,6 +70,17 @@ body {
     text-align: left;
     font-size: 2vh;
 }
+
+.pergunta-legenda {
+    font-weight: normal;
+    text-align: left;
+    font-size: 1.5vh;
+    font-style: italic;
+}
+
+
+
+
 
 .slider-container {
     width: 100%;
@@ -69,6 +126,17 @@ input[type=range] {
     text-align: left;
     margin-top: 10px;
     font-size: 2vh;
+}
+
+.salvar {
+    background-color: rgb(3, 137, 0);
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 5vh;
+    margin-bottom: 8vh;
+    width: 25%;
 }
 
 
