--- a/setup/static/styles/login.css
+++ b/setup/static/styles/login.css
@@ -24,14 +24,18 @@ body {
 }
 
 .login-container {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39);
     width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+
+    /* backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(0%); */
 }
 .login-container h2 {
     text-align: center;
