--- a/templates/lista_avaliacoes.html
+++ b/templates/lista_avaliacoes.html
@@ -21,6 +21,7 @@
     <!-- Fontes e ícones -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <!-- Estilio interno -->
     <link rel="stylesheet" href="{% static 'styles/lista_avaliacoes.css' %}">
@@ -61,46 +62,28 @@
                 Disponível até: {{ formulario.card_dados.data_fim|date:"d/m/Y" }}<br>
                 Status: 
                     {% if formulario.card_dados.status == 'Não Iniciado' %}
-                        <span style="font-weight: bold; color: red">Não Iniciado</span>
+                        <span style="font-weight: bold; color: #ab0000">Não Iniciado</span>
                     {% endif %}
-                    {% if formulario.card_dados.status == 'Iniciado' %}
-                        <span style="font-weight: bold; color: rgb(226, 177, 0)">Iniciado</span>
+                    {% if formulario.card_dados.status == 'Parcial' %}
+                        <span style="font-weight: bold; color: #ff8c00">Parcial</span>
                     {% endif %}
                     {% if formulario.card_dados.status == 'Respondido' %}
-                        <span style="font-weight: bold; color: rgb(47, 177, 0)">Respondido</span>
+                        <span style="font-weight: bold; color: #2fb100">Respondido</span>
                     {% endif %}
+                <br>Respondido em: {{ formulario.ultimo_registro|date:'d/m/Y H:i:s'}}
             </div>
         </div>
     {% endfor %}
 
 
-    <!-- <div class="card-avaliacao">
-        <div class="titulo-avaliacao">AD: Introdução ao Agronegócio</div>
-        <div class="infos-avaliacao">
-            Disponível até: 12/04/2024<br>
-            Status: <span style="font-weight: bold; color: rgb(10, 151, 0)">Respondido</span>
+
+    <div class="sair" >
+        <div class="botao-sair" id="btnSair">
+            <i class="fas fa-arrow-left"></i>&nbsp;<span style="font-weight: normal;">Sair</span>
         </div>
     </div>
-    <div class="card-avaliacao">
-        <div class="titulo-avaliacao">AD: Estudos Culturais e Antropológicos</div>
-        <div class="infos-avaliacao">
-            Disponível até: 12/04/2024<br>
-            Status: <span style="font-weight: bold; color: rgb(255, 157, 0)">Iniciado</span>
-        </div>
-    </div>
-    <div class="card-avaliacao">
-        <div class="titulo-avaliacao">Avaliação Anual</div>
-        <div class="infos-avaliacao">
-            Disponível até: 12/04/2024<br>
-            Status: <span style="font-weight: bold; color: rgb(255, 157, 0)">Iniciado</span>
-        </div>
-    </div> -->
-
-
 
     <script src="{% static 'js/lista_avaliacoes.js' %}"></script>
-
-
 
 </body>
 
